src/stages/snapshots/lumina2__stages__parse__test__util__punctuated_empty.snap
---
source: src/stages/parse.rs
expression: ""
---
PunctuatedList {
    items: [],
    punctuation: [],
}
