src/stages/snapshots/lumina2__stages__parse__test__util__punctuated_multiple.snap
---
source: src/stages/parse.rs
expression: "123,321,456"
---
PunctuatedList {
    items: [
        Integer(
            IntegerLiteral(
                IntLit(
                    123,
                ),
            ),
        ),
        Integer(
            IntegerLiteral(
                IntLit(
                    321,
                ),
            ),
        ),
        Integer(
            IntegerLiteral(
                IntLit(
                    456,
                ),
            ),
        ),
    ],
    punctuation: [
        Comma,
        Comma,
    ],
}
