src/stages/snapshots/lumina2__stages__parse__test__util__punctuated_single_trailing.snap
---
source: src/stages/parse.rs
expression: "123,"
---
PunctuatedList {
    items: [
        Integer(
            IntegerLiteral(
                IntLit(
                    123,
                ),
            ),
        ),
    ],
    punctuation: [
        Comma,
    ],
}
